[package]
name = "usb-billboard"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
byteorder = "1.5.0"
clap = { version = "4.5.54", features = ["derive"] }
ctrlc = "3.5.1"
nusb = { version = "0.2.1", features = ["smol"] }
smol = "2.0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
